NAM | Servicio para Subir Imagenes o Pdf
Se agrego, Servicio para subir las Imagenes o Pdf, a la BD, una ves que la Actividad (TblCorrespondenciaDet), se ingrese se llama a este metodo para Ingresar el Documento(s) que sean nesearios como soporte de esa Actividad y resolucion de la Comunicacion Entrante.

--- a/symfony/src/AppBundle/Resources/config/routing/documentos.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/documentos.yml
@@ -10,3 +10,13 @@ documento_edit:
     path: /edit/{id}
     defaults: { _controller: "AppBundle:Documentos:edit", id:null }
     methods: POST
+    
+documento_upload_image:
+    path: /upload-image/{id}
+    defaults: { _controller: "AppBundle:Documentos:upload", id:null }
+    methods: POST
+    
+documento_upload_pdf:
+    path: /upload-pdf/{id}
+    defaults: { _controller: "AppBundle:Documentos:upload", id:null }
+    methods: POST
