--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblDocumentos.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblDocumentos.orm.yml
@@ -2,15 +2,19 @@ BackendBundle\Entity\TblDocumentos:
     type: entity
     table: tbl_documentos
     indexes:
-        fki_det_corr:
-            columns:
-                - id_correspondencia_det
         tbl_documentos_cod_documento_idx:
             columns:
                 - cod_documento
+        fki_det_corr:
+            columns:
+                - id_correspondencia_det
         fki_doc_user:
             columns:
                 - id_usuario
+    uniqueConstraints:
+        tbl_documentos_cod_documento_key:
+            columns:
+                - cod_documento
     id:
         idDocumento:
             type: integer
@@ -65,16 +69,6 @@ BackendBundle\Entity\TblDocumentos:
             options:
                 fixed: false
     manyToOne:
-        idUsuario:
-            targetEntity: TblUsuarios
-            cascade: {  }
-            fetch: LAZY
-            mappedBy: null
-            inversedBy: null
-            joinColumns:
-                id_usuario:
-                    referencedColumnName: id_usuario
-            orphanRemoval: false
         idCorrespondenciaDet:
             targetEntity: TblCorrespondenciaDet
             cascade: {  }
@@ -84,5 +78,15 @@ BackendBundle\Entity\TblDocumentos:
             joinColumns:
                 id_correspondencia_det:
                     referencedColumnName: id_correspondencia_det
+            orphanRemoval: false
+        idUsuario:
+            targetEntity: TblUsuarios
+            cascade: {  }
+            fetch: LAZY
+            mappedBy: null
+            inversedBy: null
+            joinColumns:
+                id_usuario:
+                    referencedColumnName: id_usuario
             orphanRemoval: false
     lifecycleCallbacks: {  }
