--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblEstados.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblEstados.orm.yml
@@ -5,6 +5,10 @@ BackendBundle\Entity\TblEstados:
         tbl_estados_cod_estado_idx:
             columns:
                 - cod_estado
+    uniqueConstraints:
+        tbl_estados_cod_estado_key:
+            columns:
+                - cod_estado
     id:
         idEstado:
             type: integer
