--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblInstituciones.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblInstituciones.orm.yml
@@ -2,13 +2,17 @@ BackendBundle\Entity\TblInstituciones:
     type: entity
     table: tbl_instituciones
     indexes:
-        fki_pais_inst:
-            columns:
-                - id_pais
         fki_inst_tipo:
             columns:
                 - id_tipo_institucion
+        fki_pais_inst:
+            columns:
+                - id_pais
         tbl_instituciones_cod_institucion_idx:
+            columns:
+                - cod_institucion
+    uniqueConstraints:
+        tbl_instituciones_cod_institucion_key:
             columns:
                 - cod_institucion
     id:
