--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblCorrespondenciaEnc.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblCorrespondenciaEnc.orm.yml
@@ -2,16 +2,20 @@ BackendBundle\Entity\TblCorrespondenciaEnc:
     type: entity
     table: tbl_correspondencia_enc
     indexes:
+        fki_enc_estado:
+            columns:
+                - id_estado
         fki_enc_user:
             columns:
                 - id_usuario
         fki_enc_inst:
             columns:
                 - id_institucion
-        fki_enc_estado:
-            columns:
-                - id_estado
         tbl_correspondencia_enc_cod_correspondencia_enc_idx:
+            columns:
+                - cod_correspondencia_enc
+    uniqueConstraints:
+        tbl_correspondencia_enc_cod_correspondencia_enc_key:
             columns:
                 - cod_correspondencia_enc
     id:
@@ -55,15 +59,15 @@ BackendBundle\Entity\TblCorrespondenciaEnc:
                 fixed: false
             column: cod_direccion_sreci
     manyToOne:
-        idUsuario:
-            targetEntity: TblUsuarios
+        idEstado:
+            targetEntity: TblEstados
             cascade: {  }
             fetch: LAZY
             mappedBy: null
             inversedBy: null
             joinColumns:
-                id_usuario:
-                    referencedColumnName: id_usuario
+                id_estado:
+                    referencedColumnName: id_estado
             orphanRemoval: false
         idInstitucion:
             targetEntity: TblInstituciones
@@ -75,14 +79,14 @@ BackendBundle\Entity\TblCorrespondenciaEnc:
                 id_institucion:
                     referencedColumnName: id_institucion
             orphanRemoval: false
-        idEstado:
-            targetEntity: TblEstados
+        idUsuario:
+            targetEntity: TblUsuarios
             cascade: {  }
             fetch: LAZY
             mappedBy: null
             inversedBy: null
             joinColumns:
-                id_estado:
-                    referencedColumnName: id_estado
+                id_usuario:
+                    referencedColumnName: id_usuario
             orphanRemoval: false
     lifecycleCallbacks: {  }
