--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblCorrespondenciaEnc.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblCorrespondenciaEnc.orm.yml
@@ -14,6 +14,9 @@ BackendBundle\Entity\TblCorrespondenciaEnc:
         tbl_correspondencia_enc_cod_correspondencia_enc_idx:
             columns:
                 - cod_correspondencia_enc
+        fki_enc_direccion:
+            columns:
+                - id_direccion_sreci
     uniqueConstraints:
         tbl_correspondencia_enc_cod_correspondencia_enc_key:
             columns:
@@ -32,7 +35,7 @@ BackendBundle\Entity\TblCorrespondenciaEnc:
         codCorrespondenciaEnc:
             type: string
             nullable: false
-            length: 10
+            length: 40
             options:
                 fixed: false
             column: cod_correspondencia_enc
@@ -51,13 +54,10 @@ BackendBundle\Entity\TblCorrespondenciaEnc:
             type: date
             nullable: true
             column: fecha_max_entrega
-        codDireccionSreci:
-            type: string
+        fechaModificacion:
+            type: date
             nullable: true
-            length: 5
-            options:
-                fixed: false
-            column: cod_direccion_sreci
+            column: fecha_modificacion
     manyToOne:
         idEstado:
             targetEntity: TblEstados
@@ -88,5 +88,15 @@ BackendBundle\Entity\TblCorrespondenciaEnc:
             joinColumns:
                 id_usuario:
                     referencedColumnName: id_usuario
+            orphanRemoval: false
+        idDireccionSreci:
+            targetEntity: TblDireccionesSreci
+            cascade: {  }
+            fetch: LAZY
+            mappedBy: null
+            inversedBy: null
+            joinColumns:
+                id_direccion_sreci:
+                    referencedColumnName: id_direccion_sreci
             orphanRemoval: false
     lifecycleCallbacks: {  }
