NAM | Seguimientos d Listas
Seguimientos a las Listas del Formulario, de Ingreso de Usuairos, se creo un metodo el register.component.ts, en el que se llama a la API, con servicios que proporcionan las listas de las Tablas a las que llamen

--- a/symfony/src/AppBundle/Resources/config/routing.yml
+++ b/symfony/src/AppBundle/Resources/config/routing.yml
@@ -19,3 +19,8 @@ app_documento:
 app_correspondencia:
     resource: "@AppBundle/Resources/config/routing/correspondencia.yml"
     prefix: /correspondencia
+    
+## Redireccionamiento de las Ruta por Defecto | Modulo de ListasComunes
+app_listas:
+    resource: "@AppBundle/Resources/config/routing/listascomunes.yml"
+    prefix: /listas
