NAM | 30-08-2017 | Formulario de Ingreso de Comunicacion
Se relalizo la Maquetacion del Formulario de Ingreso de Comunicacion, se debra incluir:
Listas de la Tabla - Estados, Usuario, Instituacion :  Debe de incluir la Seleccion de l Pais y el Tipo de Institucin (Mas adelante se incluira un Metodo mas rapido par buscar).
Se definio campos extras en la Tabla Tbl_Comunicaciones_Enc, ya que el Codigo no es Obligatorio y se dejo un campo para su Uso y uno de Control Interno de la API

--- a/symfony/src/AppBundle/Resources/config/routing.yml
+++ b/symfony/src/AppBundle/Resources/config/routing.yml
@@ -24,3 +24,8 @@ app_correspondencia:
 app_listas:
     resource: "@AppBundle/Resources/config/routing/listascomunes.yml"
     prefix: /listas
+    
+## Redireccionamiento de las Ruta por Defecto | Modulo de Comunes
+app_comunes:
+    resource: "@AppBundle/Resources/config/routing/comunes.yml"
+    prefix: / comunes    
