NAM | 31-08-2017 | COM-IN
Creacionde Controller de Com in

--- a/symfony/src/AppBundle/Resources/config/routing/comunes.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/comunes.yml
@@ -5,4 +5,10 @@ comunes_upload_image:
     path: / upload-image
     defaults: { _controller: "AppBundle:Comunes:uploadImage" }
     methods: POST
+    
+## Redireccionamiento de las Ruta por Defecto | Modulo Usuarios
+comunes_genSecuenciaComIn:
+    path: /gen-secuencia-comunicacion-in
+    defaults: { _controller: "AppBundle:Comunes:genSecuenciaComIn" }
+    methods: POST
    
