--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblCorrespondenciaDet.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblCorrespondenciaDet.orm.yml
@@ -58,6 +58,13 @@ BackendBundle\Entity\TblCorrespondenciaDet:
             type: date
             nullable: true
             column: fecha_salida
+        codReferenciaSreci:
+            type: string
+            nullable: true
+            length: 30
+            options:
+                fixed: false
+            column: cod_referencia_sreci
     manyToOne:
         idEstado:
             targetEntity: TblEstados
