--- a/symfony/src/AppBundle/Resources/config/routing/listascomunes.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/listascomunes.yml
@@ -27,10 +27,22 @@ listascomunes_tipoFuncionarioList:
     defaults: { _controller: "AppBundle:ListasComunes:tipoFuncionarioList"}
     methods: POST
     
-# Lista de Departamento Funcional
+# Lista de Direcciones SRECI
+listascomunes_direccionSreciList:
+    path: /dir-sreci-list
+    defaults: { _controller: "AppBundle:ListasComunes:direccionSreciList"}
+    methods: POST
+    
+# Lista de Sub Direcciones
 listascomunes_deptoFuncionalList:
-    path: /depto-funcional-list
+    path: /subdir-sreci-list
     defaults: { _controller: "AppBundle:ListasComunes:deptoFuncionalList"}
+    methods: POST   
+   
+# Lista de Departamento Funcional
+listascomunes_deptoFuncionalUserList:
+    path: /depto-funcional-user-list
+    defaults: { _controller: "AppBundle:ListasComunes:deptoFuncionalUserList"}
     methods: POST
     
 # Lista de Instituciones | 30-08-2017
@@ -50,4 +62,10 @@ listascomunes_paisesList:
     path: /paises-list
     defaults: { _controller: "AppBundle:ListasComunes:paisesList"}
     methods: POST
+    
+# Lista de Paises | 01-09-2017
+listascomunes_tipoDocumentoList:
+    path: /tipo-documento-list
+    defaults: { _controller: "AppBundle:ListasComunes:tipoDocumentoList"}
+    methods: POST    
         
