--- a/symfony/app/config/config.yml
+++ b/symfony/app/config/config.yml
@@ -62,12 +62,12 @@ doctrine:
         auto_mapping: true
 
 # Swiftmailer Configuration
-swiftmailer:
+swiftmailer:    
     transport: %mailer_transport%
     host:      %mailer_host%
-    port:      %mailer_port%
-    encryption: %mailer_encryption%
-    auth_mode:  %mailer_auth_mode%
+ #port:      %mailer_port%
+    encryption: ssl
+    auth_mode:  login
     username:  %mailer_user%
     password:  %mailer_password%
     spool:     { type: memory }
