--- a/symfony/app/config/config_dev.yml
+++ b/symfony/app/config/config_dev.yml
@@ -31,4 +31,12 @@ monolog:
         #    level:  info
 
 #swiftmailer:
-#    delivery_address: me@example.com
+swiftmailer:
+    transport: %mailer_transport%
+    host:      %mailer_host%
+    port:      %mailer_port%
+    encryption: %mailer_encryption%
+    auth_mode:  %mailer_auth_mode%
+    username:  %mailer_user%
+    password:  %mailer_password%
+    spool:     { type: memory }
