--- a/symfony/app/config/config.yml
+++ b/symfony/app/config/config.yml
@@ -66,7 +66,7 @@ swiftmailer:
     transport: %mailer_transport%
     host:      %mailer_host%
     port:      %mailer_port%
-    encryption: ssl
+    encryption: tls
     auth_mode:  login
     username:  %mailer_user%
     password:  %mailer_password%
