--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblCorrespondenciaEnc.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblCorrespondenciaEnc.orm.yml
@@ -2,27 +2,27 @@ BackendBundle\Entity\TblCorrespondenciaEnc:
     type: entity
     table: tbl_correspondencia_enc
     indexes:
-        fki_enc_user:
-            columns:
-                - id_usuario
-        fki_comu_docu:
-            columns:
-                - id_tipo_documento
-        fki_enc_direccion:
-            columns:
-                - id_direccion_sreci
-        fki_enc_inst:
-            columns:
-                - id_institucion
-        tbl_correspondencia_enc_cod_correspondencia_enc_idx:
-            columns:
-                - cod_correspondencia_enc
         fki_corr_depto:
             columns:
                 - id_depto_funcional
+        fki_enc_user:
+            columns:
+                - id_usuario
+        tbl_correspondencia_enc_cod_correspondencia_enc_idx:
+            columns:
+                - cod_correspondencia_enc
+        fki_comu_docu:
+            columns:
+                - id_tipo_documento
+        fki_enc_inst:
+            columns:
+                - id_institucion
         fki_enc_estado:
             columns:
                 - id_estado
+        fki_enc_direccion:
+            columns:
+                - id_direccion_sreci
     uniqueConstraints:
         tbl_correspondencia_enc_cod_correspondencia_enc_key:
             columns:
@@ -48,7 +48,7 @@ BackendBundle\Entity\TblCorrespondenciaEnc:
         descCorrespondenciaEnc:
             type: string
             nullable: true
-            length: 200
+            length: 1500
             options:
                 fixed: false
             column: desc_correspondencia_enc
@@ -78,7 +78,43 @@ BackendBundle\Entity\TblCorrespondenciaEnc:
             options:
                 fixed: false
             column: tema_comunicacion
+        idDeptoAcomp:
+            type: integer
+            nullable: true
+            options:
+                unsigned: false
+            column: id_depto_acomp
     manyToOne:
+        idTipoDocumento:
+            targetEntity: TblTipoDocumento
+            cascade: {  }
+            fetch: LAZY
+            mappedBy: null
+            inversedBy: null
+            joinColumns:
+                id_tipo_documento:
+                    referencedColumnName: id_tipo_documento
+            orphanRemoval: false
+        idDeptoFuncional:
+            targetEntity: TblDepartamentosFuncionales
+            cascade: {  }
+            fetch: LAZY
+            mappedBy: null
+            inversedBy: null
+            joinColumns:
+                id_depto_funcional:
+                    referencedColumnName: id_depto_funcional
+            orphanRemoval: false
+        idDireccionSreci:
+            targetEntity: TblDireccionesSreci
+            cascade: {  }
+            fetch: LAZY
+            mappedBy: null
+            inversedBy: null
+            joinColumns:
+                id_direccion_sreci:
+                    referencedColumnName: id_direccion_sreci
+            orphanRemoval: false
         idEstado:
             targetEntity: TblEstados
             cascade: {  }
@@ -108,35 +144,5 @@ BackendBundle\Entity\TblCorrespondenciaEnc:
             joinColumns:
                 id_usuario:
                     referencedColumnName: id_usuario
-            orphanRemoval: false
-        idDireccionSreci:
-            targetEntity: TblDireccionesSreci
-            cascade: {  }
-            fetch: LAZY
-            mappedBy: null
-            inversedBy: null
-            joinColumns:
-                id_direccion_sreci:
-                    referencedColumnName: id_direccion_sreci
-            orphanRemoval: false
-        idTipoDocumento:
-            targetEntity: TblTipoDocumento
-            cascade: {  }
-            fetch: LAZY
-            mappedBy: null
-            inversedBy: null
-            joinColumns:
-                id_tipo_documento:
-                    referencedColumnName: id_tipo_documento
-            orphanRemoval: false
-        idDeptoFuncional:
-            targetEntity: TblDepartamentosFuncionales
-            cascade: {  }
-            fetch: LAZY
-            mappedBy: null
-            inversedBy: null
-            joinColumns:
-                id_depto_funcional:
-                    referencedColumnName: id_depto_funcional
             orphanRemoval: false
     lifecycleCallbacks: {  }
