--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblDocumentos.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblDocumentos.orm.yml
@@ -2,13 +2,13 @@ BackendBundle\Entity\TblDocumentos:
     type: entity
     table: tbl_documentos
     indexes:
-        tbl_documentos_cod_documento_idx:
-            columns:
-                - cod_documento
         fki_doc_user:
             columns:
                 - id_usuario
-        fki_det_corr:
+        tbl_documentos_cod_documento_idx:
+            columns:
+                - cod_documento
+        fki_co_det_docum:
             columns:
                 - id_correspondencia_det
     uniqueConstraints:
@@ -69,16 +69,6 @@ BackendBundle\Entity\TblDocumentos:
             options:
                 fixed: false
     manyToOne:
-        idCorrespondenciaDet:
-            targetEntity: TblCorrespondenciaDet
-            cascade: {  }
-            fetch: LAZY
-            mappedBy: null
-            inversedBy: null
-            joinColumns:
-                id_correspondencia_det:
-                    referencedColumnName: id_correspondencia_det
-            orphanRemoval: false
         idUsuario:
             targetEntity: TblUsuarios
             cascade: {  }
@@ -88,5 +78,15 @@ BackendBundle\Entity\TblDocumentos:
             joinColumns:
                 id_usuario:
                     referencedColumnName: id_usuario
+            orphanRemoval: false
+        idCorrespondenciaDet:
+            targetEntity: TblCorrespondenciaDet
+            cascade: {  }
+            fetch: LAZY
+            mappedBy: null
+            inversedBy: null
+            joinColumns:
+                id_correspondencia_det:
+                    referencedColumnName: id_correspondencia_det
             orphanRemoval: false
     lifecycleCallbacks: {  }
