NMA | 2017-09-12 | Resumenes de Ingresos de Oficois
Resumenes de Ingresos de Oficios en el Wiget de la ventrana.

--- a/symfony/src/AppBundle/Resources/config/routing/listascomunes.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/listascomunes.yml
@@ -83,7 +83,7 @@ listascomunes_comPendientesList:
     
  # Lista de Comunicaciones Finzalizadas | 11-09-2017
 listascomunes_comFinalizadasList:
-    path: /com-finazalizadas-list
+    path: /com-finalizados-list
     defaults: { _controller: "AppBundle:ListasComunes:comFinalizadasList"}
     methods: POST
     
