NMA | 2017-09-12 | Resumenes de Ingresos de Oficois
Resumenes de Ingresos de Oficios en el Wiget de la ventrana. v2

--- a/symfony/src/AppBundle/Resources/config/routing/listascomunes.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/listascomunes.yml
@@ -87,3 +87,9 @@ listascomunes_comFinalizadasList:
     defaults: { _controller: "AppBundle:ListasComunes:comFinalizadasList"}
     methods: POST
     
+ # Listado de Oficios a Asignar | 12-09-2017
+listascomunes_asignarOficiosList:
+    path: /asignar-oficios-list
+    defaults: { _controller: "AppBundle:ListasComunes:asignarOficiosList"}
+    methods: GET
+    
