--- a/symfony/app/config/config.yml
+++ b/symfony/app/config/config.yml
@@ -71,3 +71,15 @@ swiftmailer:
     username:  %mailer_user%
     password:  %mailer_password%
     spool:     { type: memory }
+    
+ # Knp PaginatorBundle Configuration
+knp_paginator:
+    page_range: 5
+    default_options:
+        page_name: page
+        sort_field_name: sort
+        sort_direction_name: direction
+        distinct: true
+    template: 
+        pagination: 
+        sortable: 
