NAM | 2017-09-14 | maquetacion de Asingar Actividad
Se realizo la pginacion de la ventana de Asignar Actiidad, se debe incluir un buscardor para el acceso mas rapido.

--- a/symfony/src/AppBundle/Resources/config/routing/listascomunes.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/listascomunes.yml
@@ -91,5 +91,11 @@ listascomunes_comFinalizadasList:
 listascomunes_asignarOficiosList:
     path: /asignar-oficios-list
     defaults: { _controller: "AppBundle:ListasComunes:asignarOficiosList"}
+    methods: POST
+    
+ # Listado de Oficios a Asignar Page | 14-09-2017
+listascomunes_asignarOficiosPageList:
+    path: /asignar-oficios-page-list
+    defaults: { _controller: "AppBundle:ListasComunes:asignarOficiosPageList"}
     methods: GET
     
